--- a/edhook/src/App.css
+++ b/edhook/src/App.css
@@ -1,3 +1,8 @@
+ul {
+    padding: 0;
+    margin: 0;
+}
+
 .form_control {
     border: none;
     border-bottom: 1px solid #242424;
@@ -28,4 +33,20 @@
     margin-top: 0;
     border-radius: 0;
     border-color: #242424;
+}
+
+.form-button {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+    color: #ffffff;
+    width: 100%;
+    max-width: 340px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    background-color: #ff4f5a;
+    border: none;
+    margin: 0 auto;
 }
