--- a/edhook/src/index.css
+++ b/edhook/src/index.css
@@ -1,10 +1,14 @@
+* {
+    font-family: "Inter", sans-serif;
+}
+
 html {
     height: 100%;
 }
 
 body {
     height: 100%;
-    padding-top: 4rem;
+    padding: 4rem 1rem;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
