--- a/edhook/src/App.css
+++ b/edhook/src/App.css
@@ -4,11 +4,11 @@ ul {
 }
 
 h1 {
-    font-family: "Oi";
+    font-family: "Nanum Gothic", sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 32px;
-    line-height: 51px;
+    font-size: 56px;
+    line-height: 56px;
     color: #ff4f5a;
     margin-bottom: 1.5rem;
 }
