--- a/edhook/src/App.css
+++ b/edhook/src/App.css
@@ -1,52 +1,64 @@
 ul {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+button {
+  border: none;
+}
+input {
+  border: none;
+  width: 100%;
+}
+
+p {
+  margin: 0;
 }
 
 .form_control {
-    border: none;
-    border-bottom: 1px solid #242424;
-    color: #242424;
-    border-radius: 0;
-    padding-left: 0;
+  border: none;
+  border-bottom: 1px solid #242424;
+  color: #242424;
+  border-radius: 0;
+  padding-left: 0;
 }
 
 .form_checkbox {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 4rem;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 4rem;
 }
 
 .form-check {
-    display: flex;
-    gap: 18px;
+  display: flex;
+  gap: 18px;
 }
 
 .form-check-label {
-    font-size: 17px;
-    line-height: 26px;
-    color: #242424;
-    display: flex;
+  font-size: 17px;
+  line-height: 26px;
+  color: #242424;
+  display: flex;
 }
 
 .form-check-input[type="checkbox"] {
-    margin-top: 0;
-    border-radius: 0;
-    border-color: #242424;
+  margin-top: 0;
+  border-radius: 0;
+  border-color: #242424;
 }
 
 .form-button {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 29px;
-    color: #ffffff;
-    width: 100%;
-    max-width: 340px;
-    height: 50px;
-    justify-content: center;
-    align-items: center;
-    background-color: #ff4f5a;
-    border: none;
-    margin: 0 auto;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
+  color: #ffffff;
+  width: 100%;
+  max-width: 340px;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+  background-color: #ff4f5a;
+  border: none;
+  margin: 0 auto;
 }
