--- a/edhook/src/Components/Avatar/Avatar.css
+++ b/edhook/src/Components/Avatar/Avatar.css
@@ -1,13 +1,20 @@
 .avatar-img {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 .avatar {
-  background-color: red;
-  width: 60px;
-  height: 60px;
+    background-color: green;
+    width: 60px;
+    height: 60px;
 }
 .avatar.group {
-  overflow: hidden;
-  border-radius: 50%;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.avatar.participant {
+    overflow: hidden;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
 }
