--- a/edhook/src/Components/NewNotification/NewNotification.css
+++ b/edhook/src/Components/NewNotification/NewNotification.css
@@ -1,14 +1,20 @@
 .create_message {
-  height: 3rem;
-  width: 100%;
-  display: flex;
+    height: 3rem;
+    width: 100%;
+    display: flex;
+    margin-bottom: 2rem;
 }
 .add_btn {
-  background-image: url("../../assets/icons/add.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  width: 32px;
-  outline: none;
-  margin-right: 1rem;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    background-image: url("../../assets/icons/add.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 32px;
+    outline: none;
+    margin-right: 1rem;
 }
