--- a/edhook/src/Components/Notification/Notification.css
+++ b/edhook/src/Components/Notification/Notification.css
@@ -1,45 +1,51 @@
 .notification {
-  border-bottom: 1px solid black;
-  padding: 20px 0px;
+    border-bottom: 1px solid black;
+    padding: 20px 0px;
+    font-family: "Inter";
+    font-style: normal;
 }
 
 .notification_info {
-  position: relative;
-  padding-left: 25%;
+    position: relative;
+    padding-left: 25%;
 }
 .notif_icon {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 15px;
-  height: 18px;
+    background-image: url("../../assets/icons/fi_bell.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 24px;
+    height: 24px;
 }
 .name,
 .sender {
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 23px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
 }
 
 .sender {
-  color: rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, 0.5);
 }
 
 .notification_main {
-  padding: 0 20px 0 20px;
+    padding: 0 20px 0 20px;
 }
 .notification_topic {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 30px;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
 }
 
 .notification_message {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 17px;
-  line-height: 26px;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 26px;
 }
