--- a/edhook/src/Components/NewNotification/NewNotification.css
+++ b/edhook/src/Components/NewNotification/NewNotification.css
@@ -10,6 +10,7 @@
     font-weight: 600;
     font-size: 20px;
     line-height: 24px;
+    background-color: transparent;
     background-image: url("../../assets/icons/add.svg");
     background-repeat: no-repeat;
     background-position: center;
