--- a/edhook/src/App.css
+++ b/edhook/src/App.css
@@ -1,103 +1,116 @@
 ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
+    padding: 0;
+    margin: 0;
+    list-style: none;
 }
 button {
-  border: none;
+    border: none;
 }
 input {
-  border: none;
-  width: 100%;
+    border: none;
+    width: 100%;
 }
 
 p {
-  margin: 0;
+    margin: 0;
 }
 
 h1 {
-  font-family: "Nanum Gothic", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 56px;
-  line-height: 56px;
-  color: #ff4f5a;
-  margin-bottom: 1.5rem;
+    font-family: "Nanum Gothic", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 56px;
+    line-height: 56px;
+    color: #ff4f5a;
+    margin-bottom: 1.5rem;
 }
 
 h2 {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 29px;
-  color: #070707;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+    color: #070707;
+}
+
+h3 {
+    margin: 0;
 }
 
 .form_control {
-  border: none;
-  border-bottom: 1px solid #242424;
-  color: #242424;
-  border-radius: 0;
-  padding-left: 0;
+    border: none;
+    border-bottom: 1px solid #242424;
+    color: #242424;
+    border-radius: 0;
+    padding-left: 0;
 }
 
 .form_checkbox {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 4rem;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 4rem;
 }
 
 .form-check {
-  display: flex;
-  gap: 18px;
+    display: flex;
+    gap: 18px;
 }
 
 .form-check-label {
-  font-size: 17px;
-  line-height: 26px;
-  color: #242424;
-  display: flex;
+    font-size: 17px;
+    line-height: 26px;
+    color: #242424;
+    display: flex;
 }
 
 .form-check-input[type="checkbox"] {
-  margin-top: 0;
-  border-radius: 0;
-  border-color: #242424;
+    margin-top: 0;
+    border-radius: 0;
+    border-color: #242424;
 }
 
 .white-button {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 29px;
-  color: #020202;
-  background: #ffffff;
-  border-radius: 10px;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid #000000;
-  border-radius: 10px;
-  width: 100%;
-  max-width: 340px;
-  height: 50px;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+    color: #020202;
+    background: #ffffff;
+    border-radius: 10px;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #000000;
+    border-radius: 10px;
+    width: 100%;
+    max-width: 340px;
+    height: 50px;
 }
 
 .pink-button {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 29px;
-  color: #ffffff;
-  width: 100%;
-  max-width: 340px;
-  height: 50px;
-  justify-content: center;
-  align-items: center;
-  background-color: #ff4f5a;
-  border: none;
-  margin: 0 auto;
-  border-radius: 10px;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+    color: #ffffff;
+    width: 100%;
+    max-width: 340px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    background-color: #ff4f5a;
+    border: none;
+    margin: 0 auto;
+    border-radius: 10px;
+}
+
+.white {
+    border: 1px solid #070707;
+}
+
+.red {
+    background: #ff4f5a;
+    border: none;
 }
