--- a/edhook/src/Components/Avatar/Avatar.css
+++ b/edhook/src/Components/Avatar/Avatar.css
@@ -1,13 +1,27 @@
 .avatar-img {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
+
 .avatar {
-  background-color: red;
-  width: 60px;
-  height: 60px;
+    width: 60px;
+    height: 60px;
 }
+
 .avatar.group {
-  overflow: hidden;
-  border-radius: 50%;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.avatar.group_img {
+    width: 42px;
+    height: 42px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.avatar.coach {
+    width: 71px;
+    height: 71px;
+    border-radius: 0;
 }
