--- a/edhook/src/index.css
+++ b/edhook/src/index.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-    height: 100%;
+    height: auto;
     padding: 4rem 1rem;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
