--- a/edhook/src/Components/Avatar/Avatar.css
+++ b/edhook/src/Components/Avatar/Avatar.css
@@ -18,3 +18,11 @@
     width: 50px;
     height: 50px;
 }
+
+.avatar.chat {
+    overflow: hidden;
+    border-radius: 50%;
+    flex: 0 0 auto;
+    width: 42px;
+    height: 42px;
+}
