--- a/edhook/src/Components/Schedule/Schedule.css
+++ b/edhook/src/Components/Schedule/Schedule.css
@@ -2,11 +2,13 @@
     border: 1px solid black;
     border-radius: 8px;
     overflow: hidden;
+    margin-bottom: 2rem;
 }
 .table-header {
     border: 1px solid black;
     border-radius: 8px 8px 0 0;
     height: 30px;
+    padding: 0 1rem;
 }
 .table-main {
     display: flex;
@@ -54,7 +56,7 @@
 }
 .payment-item {
     height: 30px;
-    width: 60px;
+    width: 70px;
 }
 .cell {
     display: flex;
