--- a/edhook/src/App.css
+++ b/edhook/src/App.css
@@ -115,45 +115,49 @@ h3 {
     border: none;
 }
 
-.jVbYIn {
-    gap: 10px !important;
-}
+@media screen and (max-device-width: 480px) {
+    .jVbYIn {
+        gap: 10px !important;
+    }
 
-.jVBqfj {
-    width: 100% !important;
-    border: none !important;
-}
+    .jVBqfj {
+        width: 100% !important;
+        border: none !important;
+    }
 
-.kCySkz {
-    display: none !important;
-}
+    .kCySkz {
+        width: 0 !important;
+        height: 0 !important;
+        display: none !important;
+    }
 
-.sc-eDDNvR {
-    border: 1px solid rgba(0, 0, 0, 0.5) !important;
-}
+    .sc-eDDNvR {
+        border: 1px solid rgba(0, 0, 0, 0.5) !important;
+    }
 
-.sc-beqWaB,
-.sc-fsQiph,
-.sc-eDDNvR {
-    width: 36px !important;
-    height: 36px !important;
-}
+    .sc-beqWaB,
+    .sc-fsQiph,
+    .sc-eDDNvR {
+        width: 36px !important;
+        height: 36px !important;
+    }
 
-.sc-fsQiph {
-    border-top: none !important;
-    font-family: "Inter" !important;
-    font-style: normal !important;
-    font-weight: 400 !important;
-    font-size: 17px !important;
-    line-height: 21px !important;
-    color: #070707 !important;
-}
+    .sc-fsQiph {
+        border-top: none !important;
+        font-family: "Inter" !important;
+        font-style: normal !important;
+        font-weight: 400 !important;
+        font-size: 17px !important;
+        line-height: 21px !important;
+        color: #070707 !important;
+    }
 
-.cLGTtA {
-    justify-content: space-between !important;
-}
+    .cLGTtA {
+        justify-content: space-between !important;
+    }
 
-.cbhJAk {
-    width: 104%;
-    margin-bottom: 1rem;
+    .cbhJAk {
+        width: 104% !important;
+        margin-bottom: 1rem !important;
+    }
 }
