fix: fix calendar

--- a/edhook/src/App.css
+++ b/edhook/src/App.css
@@ -119,12 +119,13 @@ h3 {
     gap: 10px !important;
 }
 
-.jVBqfj {
+.jVBqfj,
+.sc-hLseeU {
     width: 100% !important;
     border: none !important;
 }
 
-.kCySkz {
+.sc-iAEyYk {
     width: 0 !important;
     height: 0 !important;
     display: none !important;
@@ -151,11 +152,11 @@ h3 {
     color: #070707 !important;
 }
 
-.cLGTtA {
+.sc-gLDzan {
     justify-content: space-between !important;
 }
 
-.cbhJAk {
+.sc-qRumB {
     width: 104% !important;
     margin-bottom: 1rem !important;
 }
